# askdocs

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  db.py  main.py  models.py  storage.py
backend/app/auth/: deps.py  routes.py  schemas.py  security.py
backend/app/chat/: prompt.py  routes.py
backend/app/chunks/: routes.py  schemas.py
backend/app/conversations/: routes.py  schemas.py
backend/app/documents/: chunk.py  ingest.py  parse.py  routes.py  schemas.py
backend/app/retrieval/: bm25.py  embed.py  fuse.py  vector.py
backend/tests/: test_smoke.py
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  EVAL.md  FRONTEND.md  PIPELINES.md  PLAN.md
eval/: dataset.yaml  run.py
eval/results/milestones/: 2026-04-24-baseline.md
frontend/: package.json  tailwind.config.ts
frontend/app/: error.tsx  layout.tsx  not-found.tsx
frontend/app/chat/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: app-header.tsx  auth-bouncer.tsx  brand.tsx  citation-pill.tsx  confirm-dialog.tsx  pdf-page-preview.tsx  recent-conversations.tsx  skeleton.tsx  source-panel.tsx  theme-toggle.tsx  toast.tsx  upload-zone.tsx
frontend/lib/: api.ts  citation-remark.ts  sse.ts
